--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 	<meta property="og:title" content="I coded a game with Zuitt!" />
     <meta property="og:description" content="This Game Development project is powered by Zuitt Coding Bootcamp" />
     <meta property="og:site_name" content="I coded a game with Zuitt!" />
-    <meta property="og:image" content="[your-deployment-link]/images/story-thumbnail-2048.jpg" />
-    <meta property="og:image:secure_url" content="[your-deployment-link]" />
+    <meta property="og:image" content="https://kenneth2510.github.io/jsfcb-timblaco/images/story-thumbnail-2048.jpg" />
+    <meta property="og:image:secure_url" content="https://kenneth2510.github.io/jsfcb-timblaco/" />
 	<title>2048</title>
 
 	<link rel="stylesheet" type="text/css" href="styles.css">
@@ -40,7 +40,7 @@
 		    <div class="share-button-container">
 		        <div class="share-label">Share: </div>
 		        <div class="share-icons">
-		            <a href="https://www.facebook.com/sharer/sharer.php?u=[your-deployment-link]" target="_blank">
+		            <a href="https://www.facebook.com/sharer/sharer.php?u=https://kenneth2510.github.io/jsfcb-timblaco/" target="_blank">
 		                    <!-- Click to Share -->
 		               	<img src="./images/share_2048-fb.svg">
 		            </a>
